--- a/configs/4layer.yaml
+++ b/configs/4layer.yaml
@@ -1,10 +1,10 @@
 model:
   learning_rate: 1.0e-4
   weight_decay: 1.0e-4
-  optimizer: 'Adam' # ['Adam', 'AdamW']
+  optimizer: 'AdamW' # ['Adam', 'AdamW']
   lr_scheduler: 'Constant' # ['Constant', 'Cosine']
-  lr_warmup: 1000
-  lr_cosine_period: 24000 #match dataset_size/batch_size*max_epochs
+  #lr_warmup: 1000
+  #lr_cosine_period: 24000 #match dataset_size/batch_size*max_epochs
   custom: True
   num_layers: 3
   base_filters: 64
@@ -14,13 +14,13 @@ data:
   train_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata1-8.csv'
   val_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata19.csv'
   test_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata20.csv'
-  batch_size: 32
-  num_workers: 4
+  batch_size: 256
+  num_workers: 16
   augment: True
 
 trainer:
   max_epochs: 500
-  gpus: 1
+  gpus: 4
   num_nodes: 1
 
 wandb:
