--- a/configs/adamaugmented.yaml
+++ b/configs/adamaugmented.yaml
@@ -1,7 +1,7 @@
 model:
   learning_rate: 1.0e-4
   weight_decay: 1.0e-4
-  optimizer: 'AdamW' # ['Adam', 'AdamW']
+  optimizer: 'Adam' # ['Adam', 'AdamW']
   lr_scheduler: 'Constant' # ['Constant', 'Cosine']
   lr_warmup: 1000
   lr_cosine_period: 24000 #match dataset_size/batch_size*max_epochs
@@ -12,10 +12,11 @@ model:
 
 data:
   train_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata1-8.csv'
-  val_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata9.csv'
-  test_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata9.csv'
+  val_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata19.csv'
+  test_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata20.csv'
   batch_size: 256
   num_workers: 16
+  augment: True
 
 trainer:
   max_epochs: 500
