--- a/configs/coslr.yaml
+++ b/configs/coslr.yaml
@@ -1,14 +1,10 @@
 model:
   learning_rate: 1.0e-4
   weight_decay: 1.0e-4
-  optimizer: 'Adam' # ['Adam', 'AdamW']
+  optimizer: 'AdamW' # ['Adam', 'AdamW']
   lr_scheduler: 'Cosine' # ['Constant', 'Cosine']
   lr_warmup: 1000
   lr_cosine_period: 15625 #match dataset_size/batch_size*max_epochs
-  custom: False
-  num_layers: 4
-  base_filters: 64
-  blocks_per_layer: 2
 
 data:
   train_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata1-8.csv'
@@ -16,6 +12,7 @@ data:
   test_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata9.csv'
   batch_size: 256
   num_workers: 16
+  augment: True
 
 trainer:
   max_epochs: 500
