now allow resuming runs

--- a/configs/4layer.yaml
+++ b/configs/4layer.yaml
@@ -19,10 +19,13 @@ data:
   augment: True
 
 trainer:
-  max_epochs: 500
+  max_epochs: 700
   gpus: 4
   num_nodes: 1
-
+  ckpt_path: '/home/user/ckwan1/ml/checkpoints/4layer/last.ckpt'
+  
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
+  id: "uipvltzz"
+  resume: "must"
