--- a/configs/old_config/doubledatanotaugment.yaml
+++ b/configs/old_config/doubledatanotaugment.yaml
@@ -13,10 +13,13 @@ data:
   augment: False
 
 trainer:
-  max_epochs: 500
+  max_epochs: 1000
   gpus: 4
   num_nodes: 1
-
+  ckpt_path: '/home/user/ckwan1/ml/checkpoints/doubledatanotaugment/last.ckpt'
+  
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
+  id: "dlodyu97"
+  resume: "must"
