--- a/configs/old_config/tripledataaugment.yaml
+++ b/configs/old_config/tripledataaugment.yaml
@@ -3,15 +3,9 @@ model:
   weight_decay: 1.0e-4
   optimizer: 'AdamW' # ['Adam', 'AdamW']
   lr_scheduler: 'Constant' # ['Constant', 'Cosine']
-  lr_warmup: 1000
-  lr_cosine_period: 24000 #match dataset_size/batch_size*max_epochs
-  custom: False
-  num_layers: 4
-  base_filters: 64
-  blocks_per_layer: 2
 
 data:
-  train_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata1-8.csv'
+  train_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata1-18.csv'
   val_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata19.csv'
   test_csv_file: '/home/user/ckwan1/ml/file_path_csv/mlsimdata20.csv'
   batch_size: 128
@@ -19,10 +13,13 @@ data:
   augment: True
 
 trainer:
-  max_epochs: 500
+  max_epochs: 1000
   gpus: 4
   num_nodes: 1
-
+  ckpt_path: '/home/user/ckwan1/ml/checkpoints/tripledataaugment/last.ckpt'
+  
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
+  id: "o594monj"
+  resume: "must"
