--- a/configs/new_config/reversed.yaml
+++ b/configs/new_config/reversed.yaml
@@ -9,14 +9,14 @@ model:
   num_layers: 4 # layer number of UNet
   base_filters: 64 # base filter after first convolutional layer
   blocks_per_layer: 2 # number of convolutional blocks in each layer
-  init_dim: 4 # 3 for without density field in tensor
-  reversed: False # if True, predict ZA from FastPM
+  init_dim: 3 # 3 for without density field in tensor
+  reversed: True # if True, predict ZA from FastPM
 data:
   dataset_path: '/home/user/ckwan1/ml/huggingface_dataset'
   batch_size: 128
   num_workers: 16
   augment: True # if True, use data augmentation
-  density: True # if True, use density field in tensor
+  density: False # if True, use density field in tensor
 
 trainer:
   max_epochs: 1000
@@ -24,6 +24,6 @@ trainer:
   num_nodes: 1
 
 wandb:
-  project: "d3m_density"
+  project: "fastpm2za"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
-  name: "density"
+  name: "fastpm2za"
