--- a/configs/new_config/default_normalized.yaml
+++ b/configs/new_config/default_normalized.yaml
@@ -11,16 +11,17 @@ model:
   blocks_per_layer: 2 # number of convolutional blocks in each layer
   init_dim: 3 # 3 for without density field in tensor
   reversed: False # if True, predict ZA from FastPM
+  normalized: True # if True, scale the input data by the scale factor
+  normalized_scale: 128.0 # scale factor for normalization
   eul_loss: False # if True, use Eulerian loss
   eul_loss_scale: 1.0 # scale factor for Eulerian loss
-  lag_loss_scale: 3.0 # scale factor for Lagrangian loss
+  lag_loss_scale: 1.0 # scale factor for Lagrangian loss
 
 data:
-  dataset_type: 'raw' # ['raw', 'huggingface']
-  train_csv_file: '/home/user/ckwan1/ml/128train.csv'
-  val_csv_file: '/home/user/ckwan1/ml/128val.csv'
-  batch_size: 16
-  num_workers: 4
+  dataset_type: 'huggingface' # ['raw', 'huggingface']
+  dataset_path: '/home/user/ckwan1/ml/huggingface_dataset'
+  batch_size: 128
+  num_workers: 16
   augment: True # if True, use data augmentation
   density: False # if True, use density field in tensor
 
@@ -32,4 +33,4 @@ trainer:
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
-  name: "default_128"
+  name: "default"
