--- a/configs/new_config/default_vae_normalized_annealed.yaml
+++ b/configs/new_config/default_vae_normalized_annealed.yaml
@@ -5,22 +5,29 @@ model:
   lr_scheduler: 'Constant' # ['Constant', 'Cosine']
   #lr_warmup: 1000 # needed if use cosine lr_scheduler
   #lr_cosine_period: 24000 # match dataset_size/batch_size*max_epochs
-  model: 'UNet' # ['default', 'UNet', 'VAE']
+  model: 'VAE' # ['default', 'UNet', 'VAE']
   num_layers: 4 # layer number of UNet
   base_filters: 64 # base filter after first convolutional layer
   blocks_per_layer: 2 # number of convolutional blocks in each layer
   init_dim: 3 # 3 for without density field in tensor
+  latent_dim: 512
   reversed: False # if True, predict ZA from FastPM
+  normalized: True # if True, scale the input data by the scale factor
+  normalized_scale: 128.0 # scale factor for normalization
   eul_loss: False # if True, use Eulerian loss
   eul_loss_scale: 1.0 # scale factor for Eulerian loss
-  lag_loss_scale: 3.0 # scale factor for Lagrangian loss
+  lag_loss_scale: 1.0 # scale factor for Lagrangian loss
+  kl_loss: True # if True, use KL loss
+  kl_loss_scale: 1.0 # scale factor for KL loss
+  kl_loss_annealing: True # if True, use KL loss annealing
+  steps_per_cycle: 1000 # steps per cycle for KL loss annealing
+  kl_ratio: 0.5 # ratio of annealing inside a cycle
 
 data:
-  dataset_type: 'raw' # ['raw', 'huggingface']
-  train_csv_file: '/home/user/ckwan1/ml/128train.csv'
-  val_csv_file: '/home/user/ckwan1/ml/128val.csv'
-  batch_size: 16
-  num_workers: 4
+  dataset_type: 'huggingface' # ['raw', 'huggingface']
+  dataset_path: '/home/user/ckwan1/ml/huggingface_dataset'
+  batch_size: 128
+  num_workers: 16
   augment: True # if True, use data augmentation
   density: False # if True, use density field in tensor
 
@@ -32,4 +39,4 @@ trainer:
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
-  name: "default_128"
+  name: "default_vae_normalized_annealed"
