--- a/configs/new_config/srvae_realmvp_ld1024_a1000.yaml
+++ b/configs/new_config/srvae_realmvp_ld1024_a1000.yaml
@@ -1,20 +1,20 @@
 model:
-  learning_rate: 1.0e-4
-  weight_decay: 1.0e-4
-  optimizer: 'AdamW' # ['Adam', 'AdamW']
+  learning_rate: 2e-3
+  weight_decay: 0
+  optimizer: 'Adamax' # ['Adam', 'AdamW', 'Adamax']
   lr_scheduler: 'Constant' # ['Constant', 'Cosine']
-  #lr_scheduler: 'Cosine'
-  #lr_warmup: 1000
+  lr_scheduler: 'Cosine'
+  lr_warmup: 1000
   num_samples: 27000 # 30000 * spilt_ratio
   model: 'SRVAE3D' # ['default', 'UNet', 'VAE']
-  srvae_udim: 512
-  srvae_zdim: 512
+  srvae_udim: 1024
+  srvae_zdim: 1024
   srvae_prior: 'RealNVP'
-  reversed: False # if True, predict ZA from FastPM
-  lag_loss_scale: 0.5 # scale factor for Lagrangian loss
-  recon_loss_scale: 1.0 # scale factor for reconstruction loss
+  reversed: True # if True, x = FastPM, y = ZA
+  lag_loss_scale: 1.0 # scale factor for Lagrangian loss
+  recon_loss_scale: 0.0 # scale factor for reconstruction loss
   kl_loss: True # if True, use KL loss
-  kl_loss_scale: 1.0 # scale factor for KL loss
+  kl_loss_scale: 2.0 # scale factor for KL loss
   kl_loss_annealing: True # if True, use KL loss annealing
   steps_per_cycle: 1000 # steps per cycle for KL loss annealing
   kl_ratio: 0.5 # ratio of annealing inside a cycle
@@ -22,7 +22,7 @@ model:
 data:
   dataset_type: 'huggingface' # ['raw', 'huggingface']
   dataset_path: '/home/user/ckwan1/ml/huggingface_dataset'
-  batch_size: 100
+  batch_size: 32
   num_workers: 16
   augment: True # if True, use data augmentation
   density: False # if True, use density field in tensor
@@ -35,4 +35,4 @@ trainer:
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
-  name: "srvae_realnvp_ld512_a10000"
+  name: "srvae_realnvp_ld512_a1000"
