--- a/configs/new_config/default_compressed_arcsinh_3l1e.yaml
+++ b/configs/new_config/default_compressed_arcsinh_3l1e.yaml
@@ -9,10 +9,14 @@ model:
   num_layers: 4 # layer number of UNet
   base_filters: 64 # base filter after first convolutional layer
   blocks_per_layer: 2 # number of convolutional blocks in each layer
-  init_dim: 1 # 3 for without density field in tensor
+  init_dim: 3 # 3 for without density field in tensor
   reversed: False # if True, predict ZA from FastPM
-  eul_loss: False # if True, use Eulerian loss
+  compressed: True # if True, compress input data
+  compression_type: 'arcsinh' # ['arcsinh', 'tanh', 'sqrt']
+  compression_factor: 24 # compression factor
+  eul_loss: True # if True, use Eulerian loss
   eul_loss_scale: 1.0 # scale factor for Eulerian loss
+  lag_loss_scale: 3.0 # scale factor for Lagrangian loss
 
 data:
   dataset_type: 'huggingface' # ['raw', 'huggingface']
@@ -20,13 +24,14 @@ data:
   batch_size: 128
   num_workers: 16
   augment: True # if True, use data augmentation
-  density: True # if True, use density field in tensor
+  density: False # if True, use density field in tensor
 
 trainer:
-  max_epochs: 1000
+  max_epochs: 500
   gpus: 4
   num_nodes: 1
-  
+
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
+  name: "default_standardized"
