--- a/configs/new_config/naf_base_light_denoise_coslr.yaml
+++ b/configs/new_config/naf_base_light_denoise_coslr.yaml
@@ -1,25 +1,30 @@
 model:
-  learning_rate: 1.0e-4
-  weight_decay: 1.0e-4
+  learning_rate: 1.0e-3
+  weight_decay: 0
   optimizer: 'AdamW' # ['Adam', 'AdamW']
-  lr_scheduler: 'Constant' # ['Constant', 'Cosine']
-  #lr_warmup: 1000 # needed if use cosine lr_scheduler
-  #lr_cosine_period: 24000 # match dataset_size/batch_size*max_epochs
-  model: 'UNet' # ['default', 'UNet', 'VAE']
-  num_layers: 4 # layer number of UNet
+  beta1: 0.9
+  beta2: 0.9
+  lr_scheduler: 'Cosine' # ['Constant', 'Cosine']
+  lr_warmup: 1000 # needed if use cosine lr_scheduler
+  #lr_cosine_period: 400000 # match dataset_size/batch_size*max_epochs
+  model: 'NAFNet3D_base' # ['default', 'UNet', 'VAE']
   base_filters: 64 # base filter after first convolutional layer
-  blocks_per_layer: 2 # number of convolutional blocks in each layer
   init_dim: 3 # 3 for without density field in tensor
   reversed: False # if True, predict ZA from FastPM
   normalized: False
   eul_loss: False # if True, use Eulerian loss
   eul_loss_scale: 1.0 # scale factor for Eulerian loss
   lag_loss_scale: 1.0 # scale factor for Lagrangian loss
+  naf_middle_blk_num : 4
+  naf_enc_blk_nums : [2, 2, 4, 8]
+  naf_dec_blk_nums : [2, 2, 2, 2]
+  naf_dw_expand : 2
+  naf_ffn_expand : 2
 
 data:
   dataset_type: 'huggingface' # ['raw', 'huggingface']
   dataset_path: '/home/user/ckwan1/ml/huggingface_dataset'
-  batch_size: 256
+  batch_size: 64
   num_workers: 16
   augment: True # if True, use data augmentation
   density: False # if True, use density field in tensor
@@ -28,8 +33,10 @@ trainer:
   max_epochs: 1000
   gpus: 4
   num_nodes: 1
-
+  ckpt_path: "/home/user/ckwan1/ml/new_checkpoints/naf_base_denoise_coslr/last.ckpt"
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
-  name: "default"
+  name: "naf_base_denoise_coslr"
+  id : "1nmn1u2m"
+  resume: "must"
