--- a/configs/new_config/naf_base_sca_denoise_coslr.yaml
+++ b/configs/new_config/naf_base_sca_denoise_coslr.yaml
@@ -7,7 +7,7 @@ model:
   lr_scheduler: 'Cosine' # ['Constant', 'Cosine']
   lr_warmup: 1000 # needed if use cosine lr_scheduler
   #lr_cosine_period: 400000 # match dataset_size/batch_size*max_epochs
-  model: 'NAFNet3D_base' # ['default', 'UNet', 'VAE']
+  model: 'NAFNet3D_base_SCA' # ['default', 'UNet', 'VAE']
   base_filters: 64 # base filter after first convolutional layer
   init_dim: 3 # 3 for without density field in tensor
   reversed: False # if True, predict ZA from FastPM
@@ -33,10 +33,10 @@ trainer:
   max_epochs: 2000
   gpus: 4
   num_nodes: 1
-  ckpt_path: "/home/user/ckwan1/ml/new_checkpoints/naf_base_denoise_coslr/last.ckpt"
+  ckpt_path: "/home/user/ckwan1/ml/new_checkpoints/naf_base_sca_denoise_coslr/last.ckpt"
 wandb:
   project: "fyp"
   entity: "brianwan221-the-chinese-university-of-hong-kong"
-  name: "naf_base_denoise_coslr"
-  id : "1nmn1u2m"
+  name: "naf_base_sca_denoise_coslr"
+  id: "b54lw0cp"
   resume: "must"
